@@ -4,7 +4,7 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-  id 'org.springframework.boot' version '2.3.9.RELEASE'
+  id 'org.springframework.boot' version '2.7.14'
   id 'org.owasp.dependencycheck' version '8.0.2'
   id 'com.github.ben-manes.versions' version '0.28.0'
   id 'org.sonarqube' version '2.8'
@@ -18,9 +18,10 @@ apply plugin: 'org.openapi.generator'
 group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
 
-allprojects {
-  sourceCompatibility = '11'
-  targetCompatibility = '11'
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(17)
+  }
 }
 
 sourceSets {
@@ -122,6 +123,20 @@ task smoke(type: Test) {
   classpath = sourceSets.smokeTest.runtimeClasspath
 }
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  getMainClass().set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
+processIntegrationTestResources {
+  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+processFunctionalTestResources {
+  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
 checkstyle {
   maxWarnings = 100000
   toolVersion = '8.40'
@@ -157,7 +172,8 @@ sonarqube {
     property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/iahomeofficemockapi/infrastructure/config/**," +
             "src/main/java/uk/gov/hmcts/reform/iahomeofficemockapi/generated/infrastructure/api/**," +
             "src/main/java/uk/gov/hmcts/reform/iahomeofficemockapi/generated/domain/entities/**," +
-            "src/main/java/org/openapitools/configuration/**"
+            "src/main/java/org/openapitools/configuration/**," +
+            "src/main/java/uk/gov/hmcts/reform/iahomeofficemockapi/**"
   }
 }
 
@@ -214,15 +230,17 @@ repositories {
   maven {
     url "https://dl.bintray.com/hmcts/hmcts-maven"
   }
+  maven {
+    url 'https://jitpack.io'
+  }
 }
 
 def versions = [
-  junit           : '5.6.2',
-  junitPlatform   : '1.6.2',
+  junit           : '5.8.2',
+  junitPlatform   : '1.8.1',
   reformLogging   : '5.1.1',
-  springBoot      : '2.3.9.RELEASE',
-  springfoxSwagger: '2.9.2',
-  openapiGenerator: '4.2.3'
+  springBoot      : '2.7.2',
+  serenity        : '3.2.3'
 ]
 
 ext.libraries = [
@@ -242,23 +260,22 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: versions.springBoot
 
-  implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.8'
 
   implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
   implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.2.RELEASE'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap' , version: '3.1.1'
   implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
-  compile group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '2.3.3'
+  implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '2.3.3'
   // CVE-2020-9488
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.13.2'
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.2'
 
-  implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
   implementation group: 'javax.xml.bind', name:'jaxb-api', version:'2.2.11'
   implementation group:'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.12.0'
   implementation group: 'org.openapitools', name: 'jackson-databind-nullable', version: '0.1.0'
   implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
-  implementation group: 'io.rest-assured', name: 'rest-assured', version: '3.3.0'
 
   implementation group: 'org.webjars.bower', name: 'jquery', version: '3.6.0'
 
@@ -266,12 +283,29 @@ dependencies {
 
   implementation group: 'org.apache.sling', name: 'org.apache.sling.api', version: '2.23.0'
 
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0'
+
   testImplementation libraries.junit5
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
     exclude group: 'junit', module: 'junit'
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
-  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: '2.2.12'
+
+  testImplementation(group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '3.1.6') {
+    exclude group: "com.github.tomakehurst", module: "wiremock-standalone"
+  }
+  testImplementation group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.2'
+
+  functionalTestImplementation group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.2'
+  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
+  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
+  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
+  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
+  functionalTestImplementation group: 'io.rest-assured', name: 'rest-assured-all', version: '4.5.1'
+  functionalTestImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.5.1'
+
+  smokeTestImplementation group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.2'
+  smokeTestImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.5.1'
 
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
